[package]
name = "ternary-bloom-filter"
version = "0.1.0"
edition = "2021"
description = "Ternary Bloom filter for GPU-accelerable membership testing. {-1,0,+1} weighted bits allow boost/block/neutral membership. 16x denser than FP32."
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/ternary-bloom-filter"
documentation = "https://docs.rs/ternary-bloom-filter"
